src/ExprParser.java
// Generated from grammar/Expr.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, STRING=19, NUM=20, SPACES=21;
	public static final int
		RULE_program = 0, RULE_com = 1, RULE_adicionarCasas = 2, RULE_adicionarTorre = 3, 
		RULE_conexaoExpr = 4, RULE_conexaoDispositivo = 5, RULE_grafoExpr = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "com", "adicionarCasas", "adicionarTorre", "conexaoExpr", 
			"conexaoDispositivo", "grafoExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Grafo'", "'{'", "','", "'}'", "'Conex\\u00E3o'", "'('", "'x'", 
			"')'", "'Cabo'", "'Rede'", "'Casa'", "'Torre'", "'Modem'", "'Switch'", 
			"'Repetidor'", "'Dispositivo'", "'vertice'", "'aresta'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "STRING", "NUM", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ComContext com() {
			return getRuleContext(ComContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExprParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			com();
			setState(15);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComContext extends ParserRuleContext {
		public ComContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_com; }
	 
		public ComContext() { }
		public void copyFrom(ComContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GrafoContext extends ComContext {
		public GrafoExprContext e;
		public GrafoExprContext grafoExpr() {
			return getRuleContext(GrafoExprContext.class,0);
		}
		public GrafoContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterGrafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitGrafo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitGrafo(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RedeContext extends ComContext {
		public Token areaX;
		public Token areaY;
		public AdicionarCasasContext e;
		public AdicionarTorreContext d;
		public List<TerminalNode> NUM() { return getTokens(ExprParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ExprParser.NUM, i);
		}
		public AdicionarTorreContext adicionarTorre() {
			return getRuleContext(AdicionarTorreContext.class,0);
		}
		public List<AdicionarCasasContext> adicionarCasas() {
			return getRuleContexts(AdicionarCasasContext.class);
		}
		public AdicionarCasasContext adicionarCasas(int i) {
			return getRuleContext(AdicionarCasasContext.class,i);
		}
		public RedeContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterRede(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitRede(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitRede(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConexaoContext extends ComContext {
		public Token areaX;
		public Token areaY;
		public Token distanciaCabo;
		public ConexaoExprContext e;
		public ConexaoDispositivoContext d;
		public List<TerminalNode> NUM() { return getTokens(ExprParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ExprParser.NUM, i);
		}
		public ConexaoDispositivoContext conexaoDispositivo() {
			return getRuleContext(ConexaoDispositivoContext.class,0);
		}
		public List<ConexaoExprContext> conexaoExpr() {
			return getRuleContexts(ConexaoExprContext.class);
		}
		public ConexaoExprContext conexaoExpr(int i) {
			return getRuleContext(ConexaoExprContext.class,i);
		}
		public ConexaoContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterConexao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitConexao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitConexao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComContext com() throws RecognitionException {
		ComContext _localctx = new ComContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_com);
		int _la;
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new GrafoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(17);
				match(T__0);
				setState(18);
				match(T__1);
				setState(19);
				((GrafoContext)_localctx).e = grafoExpr(0);
				setState(21);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(20);
					match(T__2);
					}
				}

				setState(23);
				match(T__3);
				}
				break;
			case T__4:
				_localctx = new ConexaoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(25);
				match(T__4);
				setState(26);
				match(T__5);
				setState(27);
				((ConexaoContext)_localctx).areaX = match(NUM);
				setState(28);
				match(T__6);
				setState(29);
				((ConexaoContext)_localctx).areaY = match(NUM);
				setState(30);
				match(T__7);
				setState(31);
				match(T__1);
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__8) {
					{
					setState(32);
					match(T__8);
					}
				}

				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NUM) {
					{
					setState(35);
					((ConexaoContext)_localctx).distanciaCabo = match(NUM);
					}
				}

				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(38);
					match(T__2);
					}
				}

				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(41);
					((ConexaoContext)_localctx).e = conexaoExpr(0);
					}
					}
					setState(44); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 57344L) != 0) );
				setState(46);
				match(T__2);
				setState(47);
				((ConexaoContext)_localctx).d = conexaoDispositivo(0);
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(48);
					match(T__2);
					}
				}

				setState(51);
				match(T__3);
				}
				break;
			case T__9:
				_localctx = new RedeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				match(T__9);
				setState(54);
				match(T__5);
				setState(55);
				((RedeContext)_localctx).areaX = match(NUM);
				setState(56);
				match(T__6);
				setState(57);
				((RedeContext)_localctx).areaY = match(NUM);
				setState(58);
				match(T__7);
				setState(59);
				match(T__1);
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(60);
					((RedeContext)_localctx).e = adicionarCasas(0);
					}
					}
					setState(63); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__10 );
				setState(65);
				match(T__2);
				setState(66);
				((RedeContext)_localctx).d = adicionarTorre(0);
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(67);
					match(T__2);
					}
				}

				setState(70);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdicionarCasasContext extends ParserRuleContext {
		public AdicionarCasasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adicionarCasas; }
	 
		public AdicionarCasasContext() { }
		public void copyFrom(AdicionarCasasContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CasaContext extends AdicionarCasasContext {
		public Token numeroCasa;
		public Token x;
		public Token y;
		public List<TerminalNode> NUM() { return getTokens(ExprParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ExprParser.NUM, i);
		}
		public CasaContext(AdicionarCasasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterCasa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitCasa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitCasa(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GrupoCasasContext extends AdicionarCasasContext {
		public AdicionarCasasContext e;
		public List<AdicionarCasasContext> adicionarCasas() {
			return getRuleContexts(AdicionarCasasContext.class);
		}
		public AdicionarCasasContext adicionarCasas(int i) {
			return getRuleContext(AdicionarCasasContext.class,i);
		}
		public GrupoCasasContext(AdicionarCasasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterGrupoCasas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitGrupoCasas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitGrupoCasas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdicionarCasasContext adicionarCasas() throws RecognitionException {
		return adicionarCasas(0);
	}

	private AdicionarCasasContext adicionarCasas(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AdicionarCasasContext _localctx = new AdicionarCasasContext(_ctx, _parentState);
		AdicionarCasasContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_adicionarCasas, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new CasaContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(75);
			match(T__10);
			setState(76);
			((CasaContext)_localctx).numeroCasa = match(NUM);
			setState(77);
			((CasaContext)_localctx).x = match(NUM);
			setState(78);
			((CasaContext)_localctx).y = match(NUM);
			}
			_ctx.stop = _input.LT(-1);
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new GrupoCasasContext(new AdicionarCasasContext(_parentctx, _parentState));
					((GrupoCasasContext)_localctx).e = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_adicionarCasas);
					setState(80);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(81);
					match(T__2);
					setState(82);
					((GrupoCasasContext)_localctx).e = adicionarCasas(2);
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdicionarTorreContext extends ParserRuleContext {
		public AdicionarTorreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adicionarTorre; }
	 
		public AdicionarTorreContext() { }
		public void copyFrom(AdicionarTorreContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GrupoTorreContext extends AdicionarTorreContext {
		public AdicionarTorreContext e;
		public List<AdicionarTorreContext> adicionarTorre() {
			return getRuleContexts(AdicionarTorreContext.class);
		}
		public AdicionarTorreContext adicionarTorre(int i) {
			return getRuleContext(AdicionarTorreContext.class,i);
		}
		public GrupoTorreContext(AdicionarTorreContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterGrupoTorre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitGrupoTorre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitGrupoTorre(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TorreContext extends AdicionarTorreContext {
		public Token nomeTorre;
		public Token alcance;
		public Token x;
		public Token y;
		public TerminalNode STRING() { return getToken(ExprParser.STRING, 0); }
		public List<TerminalNode> NUM() { return getTokens(ExprParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ExprParser.NUM, i);
		}
		public TorreContext(AdicionarTorreContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterTorre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitTorre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitTorre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdicionarTorreContext adicionarTorre() throws RecognitionException {
		return adicionarTorre(0);
	}

	private AdicionarTorreContext adicionarTorre(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AdicionarTorreContext _localctx = new AdicionarTorreContext(_ctx, _parentState);
		AdicionarTorreContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_adicionarTorre, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new TorreContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(89);
			match(T__11);
			setState(90);
			((TorreContext)_localctx).nomeTorre = match(STRING);
			setState(91);
			((TorreContext)_localctx).alcance = match(NUM);
			setState(92);
			((TorreContext)_localctx).x = match(NUM);
			setState(93);
			((TorreContext)_localctx).y = match(NUM);
			}
			_ctx.stop = _input.LT(-1);
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new GrupoTorreContext(new AdicionarTorreContext(_parentctx, _parentState));
					((GrupoTorreContext)_localctx).e = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_adicionarTorre);
					setState(95);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(96);
					match(T__2);
					setState(97);
					((GrupoTorreContext)_localctx).e = adicionarTorre(2);
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConexaoExprContext extends ParserRuleContext {
		public ConexaoExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conexaoExpr; }
	 
		public ConexaoExprContext() { }
		public void copyFrom(ConexaoExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RepetidorContext extends ConexaoExprContext {
		public Token nome;
		public Token x;
		public Token y;
		public Token conectado;
		public List<TerminalNode> STRING() { return getTokens(ExprParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(ExprParser.STRING, i);
		}
		public List<TerminalNode> NUM() { return getTokens(ExprParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ExprParser.NUM, i);
		}
		public RepetidorContext(ConexaoExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterRepetidor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitRepetidor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitRepetidor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GrupoConexaoContext extends ConexaoExprContext {
		public ConexaoExprContext e;
		public List<ConexaoExprContext> conexaoExpr() {
			return getRuleContexts(ConexaoExprContext.class);
		}
		public ConexaoExprContext conexaoExpr(int i) {
			return getRuleContext(ConexaoExprContext.class,i);
		}
		public GrupoConexaoContext(ConexaoExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterGrupoConexao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitGrupoConexao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitGrupoConexao(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SwitchContext extends ConexaoExprContext {
		public Token nome;
		public Token x;
		public Token y;
		public Token conectado;
		public List<TerminalNode> STRING() { return getTokens(ExprParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(ExprParser.STRING, i);
		}
		public List<TerminalNode> NUM() { return getTokens(ExprParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ExprParser.NUM, i);
		}
		public SwitchContext(ConexaoExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterSwitch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitSwitch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitSwitch(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ModemContext extends ConexaoExprContext {
		public Token nome;
		public Token x;
		public Token y;
		public TerminalNode STRING() { return getToken(ExprParser.STRING, 0); }
		public List<TerminalNode> NUM() { return getTokens(ExprParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ExprParser.NUM, i);
		}
		public ModemContext(ConexaoExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterModem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitModem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitModem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConexaoExprContext conexaoExpr() throws RecognitionException {
		return conexaoExpr(0);
	}

	private ConexaoExprContext conexaoExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConexaoExprContext _localctx = new ConexaoExprContext(_ctx, _parentState);
		ConexaoExprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_conexaoExpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				{
				_localctx = new ModemContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(104);
				match(T__12);
				setState(105);
				((ModemContext)_localctx).nome = match(STRING);
				setState(106);
				((ModemContext)_localctx).x = match(NUM);
				setState(107);
				((ModemContext)_localctx).y = match(NUM);
				}
				break;
			case T__13:
				{
				_localctx = new SwitchContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(108);
				match(T__13);
				setState(109);
				((SwitchContext)_localctx).nome = match(STRING);
				setState(110);
				((SwitchContext)_localctx).x = match(NUM);
				setState(111);
				((SwitchContext)_localctx).y = match(NUM);
				setState(112);
				((SwitchContext)_localctx).conectado = match(STRING);
				}
				break;
			case T__14:
				{
				_localctx = new RepetidorContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(113);
				match(T__14);
				setState(114);
				((RepetidorContext)_localctx).nome = match(STRING);
				setState(115);
				((RepetidorContext)_localctx).x = match(NUM);
				setState(116);
				((RepetidorContext)_localctx).y = match(NUM);
				setState(117);
				((RepetidorContext)_localctx).conectado = match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new GrupoConexaoContext(new ConexaoExprContext(_parentctx, _parentState));
					((GrupoConexaoContext)_localctx).e = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_conexaoExpr);
					setState(120);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(121);
					match(T__2);
					setState(122);
					((GrupoConexaoContext)_localctx).e = conexaoExpr(2);
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
